--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,14 @@
 
 .app__container {
   width: 100%;
+  overflow: visible;
+  display: flex;
+  flex-direction: column;
+}
+
+.section__container {
   max-width: 1000px;
+  width: 100%;
   align-self: center;
 }
 
