--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,12 @@
   overflow: visible;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .section__container {
   max-width: 1000px;
   width: 100%;
-  align-self: center;
 }
 
 .displaytitle {
