--- a/src/App.css
+++ b/src/App.css
@@ -18,17 +18,21 @@
 
 .app__container {
   width: 100%;
-  overflow: visible;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .section__container {
-  position: relative;
   overflow: visible;
-  max-width: 1000px;
+  max-width: 1032px;
   width: 100%;
+}
+
+.row {
+    display: flex;
+    padding: 0 32px 0 32px;
+    flex-direction: row;
 }
 
 .displaytitle {
