--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -5,12 +5,19 @@
     border-radius: 8px;
     transform: translate(0, 8px);
 }
+
+.landing__main > .row {
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
 .backdrop {
     background-color: var(--primary-green);
     width: 100vw;
     display: flex;
     justify-content: center;
 }
+
 .landing__main h1 {
     color: var(--primary-yellow);
 }
@@ -22,19 +29,4 @@
 .landing__main p {
     padding: 64px 0 32px 0;
     max-width: 80%;
-}
-
-.btn {
-    width: 200px;
-    height: 60px;
-    border-radius: 16px;
-    background-color: var(--primary-yellow);
-    color: var(--secondary-grey);
-    border: none;
-}
-
-.landing__main .row {
-    display: flex;
-    padding: 48px;
-    flex-direction: row;
 }
