--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -2,4 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 72px 0 72px 0;
+}
+
+.testimonials .title {
+    align-self: start;
+    padding-bottom: 48px;
+}
+
+.testimony__container {
+    padding: 0;
 }
