--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -7,7 +7,7 @@
     text-decoration: underline;
 }
 
-.footer__container > img {
+.footer_container > img {
 }
 
 .footerlist > li {
@@ -21,5 +21,7 @@
 .footer__container {
     display: flex;
     justify-content: space-around;
+    margin: 64px 0 48px 0;
+
 }
 
