--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -13,7 +13,7 @@
 
 .backdrop {
     background-color: var(--primary-green);
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
