--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -12,6 +12,14 @@
     border-radius: 8px 8px 0 0;
 }
 
+.card a {
+    text-decoration: none;
+}
+
+.card a:visited {
+    color: var(--primary-grey);
+}
+
 .card .price {
     color: var(--secondary-pink);
 }
