--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,16 +1,22 @@
 #nav_bar > .row {
     height: 125px;
-    width: 100%;
+    width: 90vw;
+    max-width: 1250px;
     display: grid;
     grid-template-columns: 1fr 8fr;
     column-gap: 10%;
     align-items: center;
-    justify-content: space-between;
+}
+
+#nav_bar {
+    width: 100vw !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #nav_bar ul{
     display: flex;
-    flex-direction: row;
     align-self: center;
     justify-content: space-between;
     list-style-type: none;
