--- a/src/components/BookingConfirmation.css
+++ b/src/components/BookingConfirmation.css
@@ -1,13 +1,20 @@
 #booking-confirmation-page {
-  width: 100%;
+  width: 100vw;
   height: 50vh;
-  max-width: 1250px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+#booking_container {
+  max-width: 1250px;
+}
+
 #confirmation__title {
   padding-bottom: 64px;
+}
+
+b, #confirmation__description {
+  color: var(--primary-green);
 }
