--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700;800&family=Markazi+Text:wght@400;500&display=swap');
 
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
   --primary-green: #495e57;
