--- a/src/components/BookingForm.css
+++ b/src/components/BookingForm.css
@@ -25,13 +25,13 @@
   transition: all 150ms ease-in-out;
 }
 
-#booking__button:hover {
+#booking__button:hover:not(.disabled){
   background-color: var(--primary-yellow);
   color: var(--primary-grey);
   border-color: transparent;
 }
 
-#booking__button:active {
+#booking__button:active:not(.disabled){
   width: 98%;
   height: 98%;
 }
@@ -40,11 +40,9 @@
   position: absolute;
   color: red;
   font-weight: 500;
-  opacity: 0%;
 }
 
-.visible {
-  opacity: 100%;
-  transition: all 150ms ease-in-out
+.disabled {
+  cursor: not-allowed;
+  opacity: 60%;
 }
-
